# tester

./: CHANGELOG.md  README.md  tester.cabal
app/: Commands.hs  Data.hs  Eval.hs  Main.hs  Parser.hs  Random.hs  Report.hs
app/Data/: Property.hs  Solution.hs  Task.hs  Tasklist.hs
app/Eval/: Property.hs  Solution.hs  Task.hs
data/: tester.sqlite
tests/: Main.hs
